# neural-network

./: .gitattributes  README.md  git_auto.sh  gitattributes.sh  test.md
digital_image_process/: 10.color_keans_segment.cpp  10.global thresholding.cpp  10.grey_keans_segement.cpp  10.growing.cpp  10.hough_transform.cpp  10.region_splitting.cpp  10.watershed.cpp  11.boundary_track.cpp  11.fft_texture_analysis.cpp  11.fourier_descripe.cpp  11.morphological_track.cpp  11.texture_analysis.cpp  3.HE.cpp  3.line_transform.cpp  3.sharpening_filters.cpp  3.smooth_filters.cpp  3.transform.cpp  4.fft.cpp  6.color_sharpen.cpp  6.color_smooth.cpp  6.fake_color.cpp  7.wavelwt.cpp  9.HMT.cpp  9.dilate_erode.cpp  CMakeLists.txt  otsu.cpp  otsu.h
machine_Learning/: BPNetwork.cpp  Decision-Tree.cpp  LinearRegression.cpp  SVM.cpp  bayes-clasify.cpp  clustering.cpp
深度学习/: 梯度下降法.md  深度学习.md
